--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "format:check": "prettier --check .",
     "format:write": "prettier --write .",
     "lint": "eslint .",
-    "lint:fix": "eslint --fix ."
+    "lint:fix": "eslint --fix .",
+    "docker:build": "docker build -t turbo/minimal-express-boilerplate ./",
+    "docker:run": "docker run --name=turbo-minimal-express-boilerplate -p 3000:3000 turbo/minimal-express-boilerplate"
   },
   "nodemonConfig": {
     "watch": [
@@ -32,6 +34,7 @@
   "devDependencies": {
     "@eslint/js": "^9.12.0",
     "@types/express": "^4.17.21",
+    "@types/joi": "^17.2.3",
     "@types/node": "^22.7.5",
     "@types/swagger-ui-express": "^4.1.6",
     "concurrently": "^9.0.1",
@@ -43,5 +46,11 @@
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4",
     "typescript-eslint": "^8.8.1"
+  },
+  "engineStrict": true,
+  "engines": {
+    "node": "20.x.x",
+    "yarn": "Please use pnpm",
+    "npm": "Please use pnpm"
   }
 }
